--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <title>Secure Checkout</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="https://i.ibb.co.com/BVpsjX7R/logo-wagopay-1.png">
+    <link rel="apple-touch-icon" href="https://i.ibb.co.com/BVpsjX7R/logo-wagopay-1.png">
     <style>
         /* SETUP BACKGROUND */
         body { 
